feat(infrastructure): implement distance service and geocoding verification
- Added DistanceCalculatorAdapter with Haversine formula.
- Added @PostConstruct to GoogleMapsAdapter for API key validation.
- Configured headquarters coordinates and environment variables.